Fixed Background to not show white or repeat. Added mainHeader and mainBody. Created var "element-spacing" in index.css to control the uniformity of padding and margins of html elements.

--- a/index.css
+++ b/index.css
@@ -1,8 +1,46 @@
-body {
-	
+:root {
+
+	--element-spacing: 10px;
+
+}
+html {
+
 	background-image: url("background.jpg");
-//	width: 100%;
-//	height: auto;
-	background-size: 100% auto;
+	min-height: 100%;
+	height: auto;
+	background-position: center top;
+	background-size: cover;
+	background-repeat: no-repeat;
+
+}
+body {
+
+	background-color: rgba(255, 255, 255, 0.5);
+	margin: var(--element-spacing);
+	padding: var(--element-spacing);
+
+}
+.mainHeader {
+
+	background-color: rgba(255, 255, 255, 0.5);
+	background-position: center;
+	margin-bottom: var(--element-spacing);
+	padding: var(--element-spacing);
+
+}
+h1 {
+
+	text-align: center;
+
+}
+.mainBody {
+
+	background-color: rgba(255, 255, 255, 0.5);
+	padding: var(--element-spacing);
+
+}
+p {
+
+	text-align: justify;
 
 }
